<resources>
    <string name="app_name">Brain Training Game</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="long_app_name">Game Home</string>
    <string name="level_activity_name">Game Level</string>
    <string name="sub_menu_text_size">Brain Training Game</string>

    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_label">About</string>
    <string name="exit_label">Exit</string>
    <string name="start_label">Start</string>

    <string name="about_title">About</string>
    <string name="about_text">The resources that you save in the subdirectories defined in table 1 are your "default" resources. That is, these resources define the default design and content for your app. However, different types of Android-powered devices might call for different types of resources.</string>
    <string name="ok_label">OK</string>
    <string name="yes_label">YES</string>
    <string name="no_label">NO</string>
    <string name="try_label">Try</string>
    <string name="new_label">New</string>

    <string name="on_label">ON</string>
    <string name="off_label">OFF</string>

    <string-array name="game_levels">
        <item>Novice</item>
        <item>Easy</item>
        <item>Medium</item>
        <item>Guru</item>
    </string-array>
    <string name="title_activity_play">PlayActivity</string>
</resources>
