<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.incosyz.stelan.braintraininggame.HomeFragment">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/elevation_high"
        android:orientation="vertical"
        android:background="@drawable/fragment_home_background"
        android:padding="@dimen/menu_padding"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/menu_space1"
            android:text="@string/long_app_name"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/menu_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/menu_space"
            android:textAlignment="center"
            android:text="@string/sub_menu_text_size"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/sub_menu_text_size" />

        <Button
            android:id="@+id/continue_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:theme="@style/MenuButton"
            android:text="@string/continue_label" />

        <Button
            android:id="@+id/new_game_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:theme="@style/MenuButton"
            android:text="@string/new_game_label" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:theme="@style/MenuButton"
            android:text="@string/about_label" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:theme="@style/MenuButton"
            android:text="@string/exit_label" />
    </LinearLayout>

</FrameLayout>
