<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.incosyz.stelan.braintraininggame.LevelFragment">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_home_background"
        android:elevation="@dimen/elevation_high"
        android:orientation="vertical"
        android:padding="@dimen/menu_padding"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/menu_space"
            android:text="@string/level_activity_name"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/menu_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/menu_space"
            android:text="@string/sub_menu_text_size"
            android:textAlignment="center"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/sub_menu_text_size" />

        <Spinner
            android:id="@+id/game_level_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="@dimen/menu_button_margin"
            android:layout_marginBottom="@dimen/menu_space" />

        <Button
            android:id="@+id/start_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="@string/start_label"
            android:theme="@style/MenuButton" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/menu_space"
            android:text="Hints"
            android:textAlignment="center"
            android:layout_margin="@dimen/menu_button_margin"
            android:textAppearance="?android:textAppearanceLarge"
            android:textSize="@dimen/sub_menu_text_size" />


        <ToggleButton
            android:id="@+id/hint_toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/menu_button_margin"
            android:padding="@dimen/menu_button_padding"
            android:text="Hints"
            android:theme="@style/MenuButton" />


    </LinearLayout>

</FrameLayout>
